--- a/app.css
+++ b/app.css
@@ -568,25 +568,41 @@ video {
   }
 }
 
+.invisible {
+  visibility: hidden;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.inset-0 {
+  inset: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .flex {
   display: flex;
 }
 
-.h-1\/3 {
-  height: 33.333333%;
-}
-
 .h-1\/5 {
   height: 20%;
-}
-
-.h-1\/6 {
-  height: 16.666667%;
 }
 
 .h-10 {
@@ -650,10 +666,6 @@ video {
   width: 83.333333%;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
 .w-2\/3 {
   width: 66.666667%;
 }
@@ -672,6 +684,10 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.grow-2 {
+  flex-grow: 2;
 }
 
 .flex-col {
@@ -708,6 +724,10 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-2 {
@@ -791,11 +811,6 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -824,8 +839,31 @@ video {
   background-color: rgb(255 255 255 / 0.05);
 }
 
+.bg-white\/10 {
+  background-color: rgb(255 255 255 / 0.1);
+}
+
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-transparent {
+  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-black {
+  --tw-gradient-to: #000 var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -875,6 +913,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
 .pr-3 {
   padding-right: 0.75rem;
 }
@@ -900,9 +942,9 @@ video {
   line-height: 2.25rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-xl {
@@ -930,6 +972,10 @@ video {
 
 .opacity-60 {
   opacity: 0.6;
+}
+
+.opacity-70 {
+  opacity: 0.7;
 }
 
 .shadow {
@@ -995,10 +1041,6 @@ video {
   height: 10rem;
 }
 
-.grow-2{
-  flex-grow: 2;
-}
-
 .cust-red{
   color: #E50A15;
 }
@@ -1011,6 +1053,10 @@ video {
   border-color: #7e7e7e;
 }
 
+.cust-inactive{
+  color: #909190;
+}
+
 .cust-w-vid{
   width: 23.5%;
 }
@@ -1019,12 +1065,16 @@ video {
   height: 5%
 }
 
+.cust-progBar{
+  background-color: white;
+}
+
 .cust-progBar[value]::-moz-progress-bar{
   background-color: #E50A15;
 }
 
 .cust-progBar::-webkit-progress-value{
-  color: #E50A15;
+  background-color: #E50A15;
 }
 
 .cust-side-w{
@@ -1043,6 +1093,20 @@ video {
 .cust-icon-s{
   font-size: 0.05rem;
   line-height: 0.25rem;
+}
+
+.cust-bg-plus{
+  background-color: #747474;
+}
+
+.line-height-0{
+  line-height: 0;
+}
+
+.hover\:scale-101:hover {
+  --tw-scale-x: 1.01;
+  --tw-scale-y: 1.01;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:scale-105:hover {
@@ -1066,10 +1130,59 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.hover\:shadow:hover {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-inner:hover {
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-red-800:hover {
+  --tw-shadow-color: #991b1b;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-white\/20:hover {
+  --tw-shadow-color: rgb(255 255 255 / 0.2);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:shadow-white\/10:hover {
+  --tw-shadow-color: rgb(255 255 255 / 0.1);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+@media (min-width: 640px) {
+  .sm\:h-1\/6 {
+    height: 16.666667%;
+  }
+
+  .sm\:gap-0 {
+    gap: 0px;
+  }
+}
+
 @media (min-width: 768px) {
+  .md\:visible {
+    visibility: visible;
+  }
+
   .md\:mx-6 {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+  }
+
+  .md\:h-1\/3 {
+    height: 33.333333%;
   }
 
   .md\:h-10 {
@@ -1090,11 +1203,6 @@ video {
 
   .md\:h-8 {
     height: 2rem;
-  }
-
-  .md\:h-fit {
-    height: -moz-fit-content;
-    height: fit-content;
   }
 
   .md\:w-12 {
@@ -1208,6 +1316,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-1\/2 {
+    height: 50%;
+  }
+
   .lg\:h-1\/3 {
     height: 33.333333%;
   }
@@ -1216,20 +1328,37 @@ video {
     height: 16.666667%;
   }
 
-  .lg\:h-2\/3 {
-    height: 66.666667%;
+  .lg\:h-10 {
+    height: 2.5rem;
+  }
+
+  .lg\:h-2\/4 {
+    height: 50%;
   }
 
   .lg\:h-6 {
     height: 1.5rem;
   }
 
+  .lg\:h-2\/5 {
+    height: 40%;
+  }
+
+  .lg\:w-14 {
+    width: 3.5rem;
+  }
+
   .lg\:w-6 {
     width: 1.5rem;
   }
 
-  .lg\:gap-4 {
-    gap: 1rem;
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:text-3xl {
@@ -1242,13 +1371,13 @@ video {
     line-height: 1.5rem;
   }
 
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 }
