--- a/app.src.css
+++ b/app.src.css
@@ -5,9 +5,6 @@
 .vid-card{
     height: 10rem;
 }
-.grow-2{
-    flex-grow: 2;
-}
 .cust-red{
     color: #E50A15;
 }
@@ -17,17 +14,23 @@
 .border-cust-color{
     border-color: #7e7e7e;
 }
+.cust-inactive{
+    color: #909190;
+}
 .cust-w-vid{
 width: 23.5%;
 }
 .smolHeight{
     height: 5%
 }
+.cust-progBar{
+    background-color: white;
+}
 .cust-progBar[value]::-moz-progress-bar{
     background-color: #E50A15;
 }
 .cust-progBar::-webkit-progress-value{
-    color: #E50A15;
+    background-color: #E50A15;
 }
 .cust-side-w{
     width: 18.8%;
@@ -42,4 +45,10 @@ width: 23.5%;
   .cust-icon-s{
     font-size: 0.05rem;
     line-height: 0.25rem;
+  }
+  .cust-bg-plus{
+    background-color: #747474;
+  }
+  .line-height-0{
+    line-height: 0;
   }
